--- a/conditions/conditions.html
+++ b/conditions/conditions.html
@@ -39,59 +39,61 @@
       </nav>
       <main class="conditions">
         <div class="conditions__background-vector-right"></div>
-        <div class="title-container">
-            <h1 class="conditions__title">условия использования</h1>
-            <div class="title-bottom-vector"></div>
-        </div>
-        <div class="conditions__container">
-            <div class="grid-container">
-                <div class="grid-item align-right">
-                    <img src="../assets/conditions/discount-icon.svg" class="desktop-img" alt="discount coupon with % sign">
-                    <img src="../assets/conditions/discount-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
-                    <h2 class="grid-item__title">Скидка на кофе</h2>
-                    <p class="grid-item__subtitle">Купон позволяет получить скидку на кофе в любой кофейне или ресторане из нашего каталога.</p>
-                </div>
-                <div class="grid-item large-img">
-                    <img src="../assets/conditions/cup-with-qr.svg" alt="cup of coffee with QR-code">
-                </div>
-                <div class="grid-item align-left">
-                    <img src="../assets/conditions/qr-icon.svg" class="desktop-img" alt="qr-icon">
-                    <img src="../assets/conditions/qr-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
-                    <h2 class="grid-item__title">Купон — это QR-код</h2>
-                    <p class="grid-item__subtitle">Купон — это картинка (QR-код или штрихкод), которая высылается на почтовый ящик после оплаты на сайте.</p>
-                </div>
-                <div class="grid-item align-right">
-                    <img src="../assets/conditions/calendar-icon.svg" class="desktop-img" alt="calendar icon">
-                    <img src="../assets/conditions/calendar-icon-mob.svg" class="mobile-img" alt="calendar icon">
-                    <h2 class="grid-item__title">Срок действия купона</h2>
-                    <p class="grid-item__subtitle">Купон действует в течение текущего календарного месяца, независимо от того, когда был куплен. Первого числа месяца происходит обновление купона</p>
-                </div>
-                <div class="grid-item align-left">
-                    <img src="../assets/conditions/tick-icon.svg" class="desktop-img" alt="tick icon">
-                    <img src="../assets/conditions/tick-icon-mob.svg" class="mobile-img" alt="calendar icon">
-                    <h2 class="grid-item__title">Это не подписка</h2>
-                    <p class="grid-item__subtitle">Оплата это не подписка, карта нигде не сохраняется — только разовая оплата.</p>
-                </div>                
-                <div class="grid-item align-right">
-                    <img src="../assets/conditions/cup-icon.svg" class="desktop-img" alt="cup with a hot beverage icon">
-                    <img src="../assets/conditions/cup-icon-mob.svg" class="mobile-img" alt="calendar icon">
-                    <h2 class="grid-item__title">Стоимость купона = кружка кофе</h2>
-                    <p class="grid-item__subtitle">Стоимость купона сроком на месяц на неограниченное количество кофе — 250 рублей. Средняя стоимость кофе — 280 рублей.</p>
-                </div>
-                <div class="grid-item align-left">
-                    <img src="../assets/conditions/discount-25-icon.svg" class="desktop-img" alt="a coupon for 25-50% discount">
-                    <img src="../assets/conditions/discount-25-icon-mob.svg" class="mobile-img" alt="calendar icon">
-                    <h2 class="grid-item__title">Скидка от 25% до 50%</h2>
-                    <p class="grid-item__subtitle">Скидки на кофе в кофейнях от 25% до 50%, в ресторане — бесплатный кофе или скидка 50% при заказе бизнес-ланча.</p>
+        <div class="wrapper">
+            <div class="title-container">
+                <h1 class="conditions__title">условия использования</h1>
+                <div class="title-bottom-vector"></div>
+            </div>
+            <div class="conditions__container">
+                <div class="grid-container">
+                    <div class="grid-item align-right">
+                        <img src="../assets/conditions/discount-icon.svg" class="desktop-img" alt="discount coupon with % sign">
+                        <img src="../assets/conditions/discount-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
+                        <h2 class="grid-item__title">Скидка на кофе</h2>
+                        <p class="grid-item__subtitle">Купон позволяет получить скидку на кофе в любой кофейне или ресторане из нашего каталога.</p>
+                    </div>
+                    <div class="grid-item large-img">
+                        <img src="../assets/conditions/cup-with-qr.svg" alt="cup of coffee with QR-code">
+                    </div>
+                    <div class="grid-item align-left">
+                        <img src="../assets/conditions/qr-icon.svg" class="desktop-img" alt="qr-icon">
+                        <img src="../assets/conditions/qr-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
+                        <h2 class="grid-item__title">Купон — это QR-код</h2>
+                        <p class="grid-item__subtitle">Купон — это картинка (QR-код или штрихкод), которая высылается на почтовый ящик после оплаты на сайте.</p>
+                    </div>
+                    <div class="grid-item align-right">
+                        <img src="../assets/conditions/calendar-icon.svg" class="desktop-img" alt="calendar icon">
+                        <img src="../assets/conditions/calendar-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                        <h2 class="grid-item__title">Срок действия купона</h2>
+                        <p class="grid-item__subtitle">Купон действует в течение текущего календарного месяца, независимо от того, когда был куплен. Первого числа месяца происходит обновление купона</p>
+                    </div>
+                    <div class="grid-item align-left">
+                        <img src="../assets/conditions/tick-icon.svg" class="desktop-img" alt="tick icon">
+                        <img src="../assets/conditions/tick-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                        <h2 class="grid-item__title">Это не подписка</h2>
+                        <p class="grid-item__subtitle">Оплата это не подписка, карта нигде не сохраняется — только разовая оплата.</p>
+                    </div>                
+                    <div class="grid-item align-right">
+                        <img src="../assets/conditions/cup-icon.svg" class="desktop-img" alt="cup with a hot beverage icon">
+                        <img src="../assets/conditions/cup-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                        <h2 class="grid-item__title">Стоимость купона = кружка кофе</h2>
+                        <p class="grid-item__subtitle">Стоимость купона сроком на месяц на неограниченное количество кофе — 250 рублей. Средняя стоимость кофе — 280 рублей.</p>
+                    </div>
+                    <div class="grid-item align-left">
+                        <img src="../assets/conditions/discount-25-icon.svg" class="desktop-img" alt="a coupon for 25-50% discount">
+                        <img src="../assets/conditions/discount-25-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                        <h2 class="grid-item__title">Скидка от 25% до 50%</h2>
+                        <p class="grid-item__subtitle">Скидки на кофе в кофейнях от 25% до 50%, в ресторане — бесплатный кофе или скидка 50% при заказе бизнес-ланча.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="conditions__background-vector-left"></div>
-        <div class="decorations-container">
-            <div class="top-vector"></div>
-            <div class="cup"></div>
-            <div class="coffee-beans"></div>
-            <div class="bottom-vector"></div>
+            <div class="conditions__background-vector-left"></div>
+            <div class="decorations-container">
+                <div class="top-vector"></div>
+                <div class="cup"></div>
+                <div class="coffee-beans"></div>
+                <div class="bottom-vector"></div>
+            </div>
         </div>
     </main>
     <footer class="footer">
